src/test/ui/regions/regions-outlives-projection-container-hrtb.nll.stderr
error: lifetime may not live long enough
<<<<<<< HEAD   (086005 Importing rustc-1.38.0)
  --> $DIR/regions-outlives-projection-container-hrtb.rs:35:12
   |
LL | fn with_assoc<'a,'b>() {
   |               -- -- lifetime `'b` defined here
   |               |
   |               lifetime `'a` defined here
...
LL |     let _: &'a WithHrAssoc<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

error: lifetime may not live long enough
  --> $DIR/regions-outlives-projection-container-hrtb.rs:57:12
=======
  --> $DIR/regions-outlives-projection-container-hrtb.rs:30:12
   |
LL | fn with_assoc<'a,'b>() {
   |               -- -- lifetime `'b` defined here
   |               |
   |               lifetime `'a` defined here
...
LL |     let _: &'a WithHrAssoc<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

error: lifetime may not live long enough
  --> $DIR/regions-outlives-projection-container-hrtb.rs:50:12
>>>>>>> BRANCH (8cd2c9 Importing rustc-1.39.0)
   |
LL | fn with_assoc_sub<'a,'b>() {
   |                   -- -- lifetime `'b` defined here
   |                   |
   |                   lifetime `'a` defined here
...
LL |     let _: &'a WithHrAssocSub<TheType<'b>> = loop { };
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type annotation requires that `'b` must outlive `'a`

error: aborting due to 2 previous errors

